# fractals

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  output.ppm
shaders/: shader.frag  shader.vert
src/: main.c  shader.frag  shader.vert  vec.c  vec.h
